--- a/src/saar_website/templates/saar_website/produits/produit-6.html
+++ b/src/saar_website/templates/saar_website/produits/produit-6.html
@@ -18,20 +18,17 @@
     <!-- Header End -->
 
      <!-- Services Start -->
-     <div class="container-fluid bg-white service">
-        <div class="container py-5">
+     <div class="mx-5 py-5">
+        {% comment %} <div class="container py-5"> {% endcomment %}
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 {% comment %} <h1 class="mb-0" style="color: red;">A PROPOS</h1> {% endcomment %}
-                <P style="font-size: 1.25em; color: black; text-align: justify;">{{produit.contenu}} <br><strong>SAAR Assurances</strong> prend en charge les dommages subis par vos biens lors d'une opération de transport.</P>
+                <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">{{produit.contenu}} <br><strong>SAAR Assurances</strong> prend en charge les dommages subis par vos biens lors d'une opération de transport.</P>
             </div>
-
-          
-            
            
 
-            <div class="mx-auto mb-4" style="max-width: 900px;">
-                <h1 class="mb-2" style="color: red;">NOS GARANTIES</h1>
+            <div class="mx-5 mb-5">
+                <h1 class="mb-4" style="color: red;">NOS GARANTIES</h1>
                 <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li> Dommages aux biens transportés.</li>
                     <li> Perte des biens transportés.</li>
@@ -39,22 +36,22 @@
                 </ul>
             </div>
 
-            <div class="mx-auto mb-4" style="max-width: 900px;">
-                <h1 class="mb-2" style="color: red;">QUI PEUT SOUSCRIRE ?</h1>
+            <div class="mx-5 mb-5">
+                <h1 class="mb4" style="color: red;">QUI PEUT SOUSCRIRE ?</h1>
                 <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">Toute personne physique ou morale.</P>
             </div>
 
-            <div class="mx-auto mb-4" style="max-width: 900px;">
-                <h1 class="mb-2" style="color: red;">COMMENT SOUSCRIRE A CE PRODUIT ?</h1>
+            <div class="mx-5 mb-5">
+                <h1 class="mb-4" style="color: red;">COMMENT SOUSCRIRE A CE PRODUIT ?</h1>
                 <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">Il suffit de remplir un questionnaire conçu à cet effet et fournir les informations demandées pour obtenir une cotation auprès de n'importe quel bureau de la <strong>SAAR Assurances</strong> Côte d'Ivoire.</P>
             </div>
 
-            <div class="mx-auto mb-4" style="max-width: 900px;">
-                <h1 class="mb-2" style="color: red;">QUE FAIRE EN CAS DE SINISTRE ?</h1>
+            <div class="mx-5 mb-5">
+                <h1 class="mb-4" style="color: red;">QUE FAIRE EN CAS DE SINISTRE ?</h1>
                 <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">Déclarez le sinistre dans les plus brefs délais (48h pour les vols, 5 jours pour les autres sinistres).</P>
             </div>
 
-        </div>
+        {% comment %} </div> {% endcomment %}
     </div>
     <!-- Services End -->
 
