--- a/src/saar_website/templates/saar_website/produits/produit-7.html
+++ b/src/saar_website/templates/saar_website/produits/produit-7.html
@@ -18,20 +18,16 @@
     <!-- Header End -->
 
     <!-- Services Start -->
-    <div class="container-fluid bg-white service">
-        <div class="container py-5">
+    <div class="mx-5 py-5">
+        {% comment %} <div class="container py-5"> {% endcomment %}
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 {% comment %} <h1 class="mb-0" style="color: red;">A PROPOS</h1> {% endcomment %}
                 <P class="mb-2" style="font-size: 1.25em; color: black; text-align: justify;">{{produit.contenu}} <br>Une <strong>caution (ou garantie financière)</strong> est un engagement par signature pris par un établissement financier qui permet, en cas de défaillance contractuelle ou de non-respect d'une obligation légale de votre part, de couvrir vos bénéficiaires publics ou privés.</P>
             </div>
 
-          
-            
-           
-
-            <div class="mx-auto mb-4" style="max-width: 900px;">
-                <h1 class="mb-2" style="color: red;">LES CAUTIONS EMISES PAR LA SAAR </h1>
+            <div class="mx-5 mb-5">
+                <h1 class="mb-4" style="color: red;">LES CAUTIONS EMISES PAR LA SAAR </h1>
                 <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong>Caution pour soumission :</strong> couvre le maître d'ouvrage contre le retrait de l'offre, la non signature ou la non production d'une caution de bonne fin par le soumissionnaire d'un marché.</li>
                     <li><strong>Caution d'avance de démarrage :</strong> assure le remboursement d'une avance consentie au cas où les travaux ne seraient pas exécutés par l'entrepreneur.</li>
@@ -42,20 +38,20 @@
             </div>
 
 
-            <div class="mx-auto mb-4" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 <h1 class="mb-2" style="color: red;">QUI PEUT SOUSCRIRE?</h1>
                 
             </div>
 
 
-            <div class="mx-auto mb-4" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 <h1 class="mb-2" style="color: red;">COMMENT SOUSCRIRE A CE PRODUIT?</h1>
                 
             </div>
 
            
 
-        </div>
+        {% comment %} </div> {% endcomment %}
     </div>
     <!-- Services End -->
 
