--- a/src/saar_website/templates/saar_website/produits/produit-8.html
+++ b/src/saar_website/templates/saar_website/produits/produit-8.html
@@ -18,11 +18,11 @@
     <!-- Header End -->
 
       <!-- Services Start -->
-      <div class="container-fluid bg-white service py-5">
-        <div class="container py-5">
+      <div class="mx-5 py-5">
+        {% comment %} <div class="container py-5"> {% endcomment %}
            
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 {% comment %} <h1 class="mb-0" style="color: red;">A PROPOS</h1> {% endcomment %}
                 <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">{{produit.contenu}}</P>
             </div>
@@ -31,7 +31,7 @@
                 <h1 class="section-title px-3" style = "color: black;">ASSURANCE RESPONSABILITE CIVILE PROFESSIONNELLE</h1>
             </div> 
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 {% comment %} <h2 class="mb-0" style="color: red;">OBJET</h2><br/>  {% endcomment %}
                 {% comment %} <P class="mb-4" style="font-size: 1.25em; color: black;">aszdzaaaaaaaaaaaad</P> {% endcomment %}
                 {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
@@ -41,8 +41,8 @@
 
             </div>
 
-            <div class="mx-auto mb-5" style="max-width: 900px;" >
-                <h2 class="mb-0" style="color: red;">NOS GARANTIES</h2><br/> 
+            <div class="mx-5 mb-5" >
+                <h2 class="mb-4" style="color: red;">NOS GARANTIES</h2><br/> 
                <ul style="font-size: 1.25em; color: black; text-align: justify;" >
                    <li ><strong>Responsabilité Civil Exploitation </strong></li>
                    <li><strong>Responsabilité Civile Professionnelle </strong></li>
@@ -51,8 +51,8 @@
                 </ul>
             </div>
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
-                <h2 class="mb-0" style="color: red;">QUI PEUT SOUSCRIRE?</h2><br/> 
+            <div class="mx-5 mb-5">
+                <h2 class="mb-4" style="color: red;">QUI PEUT SOUSCRIRE?</h2><br/> 
                 {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>Toute entreprise. Que vous soyez dans le commerce, l'industrie, les services ou toute autre activité, nous avons une solution adaptée à vos besoins.</li>
                 </ul> {% endcomment %}
@@ -60,8 +60,8 @@
 
             </div>
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
-                <h2 class="mb-0" style="color: red;">COMMENT SOUSCRIRE?</h2><br/> 
+            <div class="mx-5 mb-5">
+                <h2 class="mb-4" style="color: red;">COMMENT SOUSCRIRE?</h2><br/> 
                 {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>Il suffit de remplir le questionnaire conçu à cet effet et fournir les informations demandées pour obtenir une cotation auprès de n'importe quel Bureau SAAR Assurances en Côte d'Ivoire.</li>
                 </ul> {% endcomment %}
@@ -77,7 +77,9 @@
                 <h1 class="section-title px-3" style = "color: black;">ASSURANCE MULTIRISQUE PROFESSIONNEL</h1>
             </div> 
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
+            
+
+            <div class="mx-5 mb-5">
                 {% comment %} <h2 class="mb-0" style="color: red;">OBJET</h2><br/>  {% endcomment %}
                 {% comment %} <P class="mb-4" style="font-size: 1.25em; color: black;">aszdzaaaaaaaaaaaad</P> {% endcomment %}
                 {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
@@ -87,8 +89,8 @@
 
             </div>
 
-            <div class="mx-auto mb-5" style="max-width: 900px;" >
-                <h2 class="mb-0" style="color: red;">NOS GARANTIES</h2><br/> 
+            <div class="mx-5 mb-5">
+                <h2 class="mb-4" style="color: red;">NOS GARANTIES</h2><br/> 
                <ul style="font-size: 1.25em; color: black; text-align: justify;" >
                    <li ><strong>Incendie et évènements assimilés</strong></li>
                    <li><strong>Dommages Electriques</strong></li>
@@ -104,8 +106,8 @@
                 </ul>
             </div>
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
-                <h2 class="mb-0" style="color: red;">QUI PEUT SOUSCRIRE?</h2><br/> 
+            <div class="mx-5 mb-5">
+                <h2 class="mb-4" style="color: red;">QUI PEUT SOUSCRIRE?</h2><br/> 
                 {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>Toute entreprise ou PME peu importe le domaine d'activité.</li>
                 </ul> {% endcomment %}
@@ -113,8 +115,8 @@
 
             </div>
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
-                <h2 class="mb-0" style="color: red;">COMMENT SOUSCRIRE?</h2><br/> 
+            <div class="mx-5 mb-5">
+                <h2 class="mb-4" style="color: red;">COMMENT SOUSCRIRE?</h2><br/> 
                 {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>Remplissez un questionnaire et fournissez les informations demandées pour obtenir une cotation. Rendez-vous dès maintenant dans un bureau de SAAR Assurances Côte d'Ivoire.</li>
                 </ul> {% endcomment %}
@@ -127,7 +129,7 @@
                 <h1 class="section-title px-3" style = "color: black;">ASSURANCE TOUS RISQUES CHANTIERS</h1>
             </div> 
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
+            <div class="mx-5 mb-5">
                 <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">"Avec <strong>TOUS RISQUES CHANTIERS</strong>, la SAAR couvre mes chantiers en cas d'accident". L'assurance tous risques chantiers (ou "TRC") permet au maître d'ouvrage, qu'il soit particulier ou professionnel, d'être couvert contre de très nombreux dommages qui pourraient survenir dans le cadre de travaux de construction ou de rénovation</P>
                 {% comment %} <h2 class="mb-0" style="color: red;">OBJET</h2><br/>  {% endcomment %}
                 {% comment %} <P class="mb-4" style="font-size: 1.25em; color: black;">aszdzaaaaaaaaaaaad</P> {% endcomment %}
@@ -137,8 +139,8 @@
                 </ul> {% endcomment %}
             </div>
 
-            <div class="mx-auto mb-5" style="max-width: 900px;" >
-                <h2 class="mb-0" style="color: red;">NOS GARANTIES</h2><br/> 
+            <div class="mx-5 mb-5">
+                <h2 class="mb-4" style="color: red;">NOS GARANTIES</h2><br/> 
                <ul style="font-size: 1.25em; color: black; text-align: justify;" >
                    <li ><strong>Responsabilité Civil Exploitation </strong></li>
                    <li><strong>Responsabilité Civile Professionnelle </strong></li>
@@ -147,16 +149,16 @@
                 </ul>
             </div>
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
-                <h2 class="mb-0" style="color: red;">QUI PEUT SOUSCRIRE?</h2><br/> 
+            <div class="mx-5 mb-5">
+                <h2 class="mb-4" style="color: red;">QUI PEUT SOUSCRIRE?</h2><br/> 
                 {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>Toute entreprise. Que vous soyez dans le commerce, l'industrie, les services ou toute autre activité, nous avons une solution adaptée à vos besoins.</li>
                 </ul> {% endcomment %}
                 <P class="mb-4" style="font-size: 1.25em; color: black; text-align: justify;">Toute entreprise. Que vous soyez dans le commerce, l'industrie, les services ou toute autre activité, nous avons une solution adaptée à vos besoins. En cas de dommages, ce sont les entreprises qui interviennent <strong>sur le chantier</strong> qui sont à priori responsables du sinistre. Pour autant, c'est bel et bien le maître d'ouvrage <strong>doit souscrire l'assurance TRC.</strong></P>
             </div>
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
-                <h2 class="mb-0" style="color: red;">QUELS AVANTAGES OFFRE L'ASSURANCE TRC AUX PROFESSIONNELS DE BTP</h2><br/> 
+            <div class="mx-5 mb-5">
+                <h2 class="mb-4" style="color: red;">QUELS AVANTAGES OFFRE L'ASSURANCE TRC AUX PROFESSIONNELS DE BTP</h2><br/> 
                 {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>Il suffit de remplir le questionnaire conçu à cet effet et fournir les informations demandées pour obtenir une cotation auprès de n'importe quel Bureau SAAR Assurances en Côte d'Ivoire.</li>
                 </ul> {% endcomment %}
@@ -164,8 +166,8 @@
 
             </div>
 
-            <div class="mx-auto mb-5" style="max-width: 900px;">
-                <h2 class="mb-0" style="color: red;">COMMENT SOUSCRIRE?</h2><br/> 
+            <div class="mx-5 mb-5">
+                <h2 class="mb-4" style="color: red;">COMMENT SOUSCRIRE?</h2><br/> 
                 {% comment %} <ul style="font-size: 1.25em; color: black; text-align: justify;">
                     <li><strong></strong>Il suffit de remplir le questionnaire conçu à cet effet et fournir les informations demandées pour obtenir une cotation auprès de n'importe quel Bureau SAAR Assurances en Côte d'Ivoire.</li>
                 </ul> {% endcomment %}
@@ -177,7 +179,7 @@
 
 
 
-        </div>
+        {% comment %} </div> {% endcomment %}
     </div>
     <!-- Services End -->
 
