--- a/src/saar_website/templates/saar_website/produits/produit-9.html
+++ b/src/saar_website/templates/saar_website/produits/produit-9.html
@@ -25,11 +25,15 @@
 
             {% comment %} <h1 class="mb-0" style="color: red;">A PROPOS</h1> {% endcomment %}
             <P style="font-size: 1.25em; color: black; text-align: justify;">{{produit.contenu | safe}}</P>
-            <P style="font-size: 1.25em; color: black; text-align: justify;"> <strong>SAAR TAKAFUL</strong> est basée sur l'interdiction de trois éléments :</P>
+            <P style="font-size: 1.25em; color: black; text-align: justify;"> <strong>SAAR TAKAFUL</strong> est basée sur les principes de la finance islamique, d'où l'interdiction de  <strong>trois</strong> éléments et l'obligation de <strong>deux</strong> éléments :</P>
             <ul style="font-size: 1.25em; color: black; text-align: justify;">
                 <li class="mb-4"><strong>Gharar :</strong> Interdiction de toutes les activités qui ont un élément d'incertitude exagéré, d'ambiguitéou ou de déception.</li>
                 <li class="mb-4"><strong>Maysir :</strong> Interdiction de toute forme d'arrangement où le droit des contractants dépend d'un évènement aléatoire.</li>
-                <li class="mb-4"><strong>Al Riba :</strong> l'Islam interdit le paiement et la perception de l'intérêt.</li>
+                <li class="mb-5"><strong>Al Riba :</strong> Interdiction de paiement et de perception de l'intérêt.</li>
+
+                <li class="mb-4"><strong></strong> Obligation d'adosser tous nos investissements à des actifs tangibles.</li>
+                <li class="mb-4"><strong></strong> Obligation de respect du partage des pertes et des profits.</li>
+
             </ul>
         </div>
 
@@ -52,7 +56,7 @@
 
         <div class="mx-5 mb-5">
             <h1 class="mb-2" style="color: red;">QUI PEUT SOUSCRIRE ?</h1>
-            <p style="font-size: 1.25em; color: black; text-align: justify;">Tout personne qui sollicite une assurance alternative à l'assurance classique.</p>
+            <p style="font-size: 1.25em; color: black; text-align: justify;">Toute personne physique ou morale exerçant une activité <strong>Halal</strong> (Licite).</p>
         </div>
 
         <div class="mx-5 mb-5">
