--- a/src/saar_website/templates/saar_website/layouts/base.html
+++ b/src/saar_website/templates/saar_website/layouts/base.html
@@ -58,17 +58,194 @@
             <h2>My web site</h2>
           {% endblock content %}
 
+          {% comment %} <section style="background-color: #eee;">
+            <div class="container py-5">
+          
+              <div class="row d-flex justify-content-center">
+                <div class="col-md-8 col-lg-6 col-xl-4">
+
+                <a data-mdb-ripple-init class="btn btn-info btn-lg btn-block back-to" data-mdb-collapse-init href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" >
+                    <div class="d-flex justify-content-between align-items-center">
+                        <span>Collapsible Chat App</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    </a>
+          
+                  <div class="card" id="chat1" style="border-radius: 15px;">
+                    <div
+                      class="card-header d-flex justify-content-between align-items-center p-3 bg-info text-white border-bottom-0"
+                      style="border-top-left-radius: 15px; border-top-right-radius: 15px;">
+                      <i class="fas fa-angle-left"></i>
+                      <p class="mb-0 fw-bold">Live chat</p>
+                      <i class="fas fa-times"></i>
+                    </div>
+                    <div class="card-body">
+          
+                      <div class="d-flex flex-row justify-content-start mb-4">
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp" alt="avatar 1"
+                          style="width: 45px; height: 100%;">
+                        <div class="p-3 ms-3" style="border-radius: 15px; background-color: rgba(57, 192, 237,.2);">
+                          <p class="small mb-0">Hello and thank you for visiting MDBootstrap. Please click the video below.</p>
+                        </div>
+                      </div>
+          
+                      <div class="d-flex flex-row justify-content-end mb-4">
+                        <div class="p-3 me-3 border" style="border-radius: 15px; background-color: #fbfbfb;">
+                          <p class="small mb-0">Thank you, I really like your product.</p>
+                        </div>
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp" alt="avatar 1"
+                          style="width: 45px; height: 100%;">
+                      </div>
+          
+                      <div class="d-flex flex-row justify-content-start mb-4">
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp" alt="avatar 1"
+                          style="width: 45px; height: 100%;">
+                        <div class="ms-3" style="border-radius: 15px;">
+                          <div class="bg-image">
+                            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/screenshot1.webp"
+                              style="border-radius: 15px;" alt="video">
+                            <a href="#!">
+                              <div class="mask"></div>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+          
+                      <div class="d-flex flex-row justify-content-start mb-4">
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp" alt="avatar 1"
+                          style="width: 45px; height: 100%;">
+                        <div class="p-3 ms-3" style="border-radius: 15px; background-color: rgba(57, 192, 237,.2);">
+                          <p class="small mb-0">...</p>
+                        </div>
+                      </div>
+          
+                      <div class="form-outline">
+                        <textarea class="form-control" id="textAreaExample" rows="4"></textarea>
+                        <label class="form-label" for="textAreaExample">Type your message</label>
+                      </div>
+          
+                    </div>
+                  </div>
+          
+                </div>
+              </div>
+          
+            </div>
+          </section> {% endcomment %}
+
+          <section class="back-to">
+            <div class="container py-5">
+              <div class="row d-flex justify-content-center">
+
+                
+                <div>   
+                    
+                    <!-- Button trigger for the collapsible chat -->
+
+                 <a id="chatToggle" class="btn btn-info btn-lg btn-block btn-md-square back-to" role="button">
+                    {% comment %} <div class="d-flex justify-content-between align-items-center">
+                      <span>Collapsible Chat App</span> {% endcomment %}
+                      {% comment %} <i class="fa fa-chevron-down"></i> {% endcomment %}
+                      <i class="fas fa-comment-dots" style="color: white;"></i>  
+                      <span class="tooltip-text">Posez-moi une question</span>
+                      {% comment %} <i class="far fa-comments"></i>                   {% endcomment %}
+                      {% comment %} </div> {% endcomment %}
+                  </a>
+              
+                  <!-- Collapsed content (initially hidden) -->
+                  <div id="chatSection" class="mt-3" style="display: none;">
+                    <div class="card" style="position: relative;" id="chat4">
+                      <!-- Entête du Chat -->
+                      <!-- Entête du Chat avec espace entre l'icône et le texte -->
+                        <div class="card-header d-flex justify-content-start align-items-center">
+                          <i class="fas fa-comment-dots" style="font-size: 150%; margin-right: 4px;"></i>  
+                          <h4 class="ms-2 my-0">SAARBot</h4>
+                        </div>
+                      <div class="card-body" style="position: relative; height: 400px; overflow-y: auto;">
+                        <!-- Chat content -->
+                        <div class="d-flex flex-row justify-content-start mb-4">
+                            {% comment %} <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
+                            alt="avatar 1" style="width: 45px; height: 100%;"> {% endcomment %}
+                            <i class="fas fa-user-tie" style="font-size: 45px; color: #D6B033;" ></i>
+                          <div>
+                            <p class="small p-2 ms-3 mb-1 text-white rounded-3 bg-primary">Salut ! <br> Bienvenue à SAAR Assurances Côte d'Ivoire.</p>
+                            <p class="small p-2 ms-3 mb-1 text-white rounded-3 bg-primary">Comment puis je vous aider ?</p>
+                          </div>
+                        </div>
+          
+                        <div class="divider d-flex align-items-center mb-4">
+                          {% comment %} <p class="text-center mx-3 mb-0" style="color: #a2aab7;">Today</p> {% endcomment %}
+                        </div>
+          
+                        <div class="d-flex flex-row justify-content-end mb-4 pt-1">
+                          <div>
+                            <p class="small p-2 me-3 mb-1 rounded-3 bg-light" style="color: black;">Hiii, I'm good.</p>
+                            <p class="small p-2 me-3 mb-1 rounded-3 bg-light" style="color: black;">How are you doing?</p>
+                            <p class="small p-2 me-3 mb-1 rounded-3 bg-light" style="color: black;">Long time no see! Tomorrow office. will be free on sunday. ong time no see! Tomorrow office. will be free on sunda ong time no see! Tomorrow office. will be free on sundaong time no see! Tomorrow office. will be free on sunda</p>
+                          </div>
+                            {% comment %} <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp"
+                            alt="avatar 1" style="width: 45px; height: 100%;"> {% endcomment %}
+                            <i class="fas fa-user" style="font-size: 45px; color: #B4B4B8;" ></i>
+                        </div>
+          
+                        <!-- Other chat messages here... -->
+          
+                      </div>
+
+                      <div class="card-footer text-muted d-flex justify-content-start align-items-center p-3">
+                        {% comment %} <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp"
+                          alt="avatar 3" style="width: 40px; height: 100%;"> {% endcomment %}
+                          <i class="fas fa-user" style="font-size: 45px; color: #B4B4B8; margin-right: 5px;" ></i>
+                        <textarea class="form-control" id="exampleFormControlInput3" rows="2" placeholder="Posez moi votre question... "></textarea>
+                        {% comment %} <input type="text" class="form-control" id="exampleFormControlInput3" placeholder="Type message"> {% endcomment %}
+                        {% comment %} <a class="ms-1 text-muted" href="#!"><i class="fas fa-paperclip"></i></a>
+                        <a class="ms-3 text-muted" href="#!"><i class="fas fa-smile"></i></a> {% endcomment %}
+                        <a class="ms-3 link-info" href="#!"><i class="fas fa-paper-plane" style="font-size: 180%;"></i></a>
+                      </div>
+                    </div>
+                  </div>
+          
+                </div>
+              </div>
+            </div>
+          </section>
+          
+       
+
 
         {% include 'saar_website/partials/footer.html' %}
             
 
+        <!-- Chatbot Affiche -->
 
-
-
+          <!-- Buttons trigger collapse -->
           <!-- Back to Top -->
-          <a href="#" class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top"><i class="fa fa-arrow-up"></i></a>   
+        {% comment %} <div class="d-flex justify-content-end mb-4"> {% endcomment %}
+         
+        {% comment %} </div> {% endcomment %}
+            
+        <!-- Back to Top -->
+        <div class="d-flex justify-content-end">
+            <a href="#" class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top"><i class="fa fa-arrow-up"></i></a>   
+        </div>
 
-        
+        <script>
+            document.getElementById("chatToggle").addEventListener("click", function() {
+              var chatSection = document.getElementById("chatSection");
+              var icon = this.querySelector('i');
+          
+              if (chatSection.style.display === "none" || chatSection.style.display === "") {
+                chatSection.style.display = "block";
+                icon.classList.remove("fa-chevron-down");
+                icon.classList.add("fa-chevron-up");
+              } else {
+                chatSection.style.display = "none";
+                icon.classList.remove("fa-chevron-up");
+                icon.classList.add("fa-chevron-down");
+              }
+            });
+          </script>
+
           <!-- JavaScript Libraries -->
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -80,6 +257,7 @@
   
           <!-- Template Javascript -->
           <script src="{% static 'js/main.js' %}"></script>
+
       </body>
   
   </html>
